# SDA-An-1

./: .gitignore  README.md
TAD MultiDictionar/Proiect C++/: App.cpp  CMakeLists.txt  IteratorLDI.h  IteratorMD.cpp  IteratorMD.h  LDI.h  MD.cpp  MD.h  TestExtins.cpp
TAD_Colectie/Proiect C++/Colectie/: CMakeLists.txt  Colectie.cpp  Colectie.h  IteratorColectie.cpp  IteratorColectie.h
TAD_Multime/Proiect C++/Multime/: CMakeLists.txt  IteratorMultime.cpp  IteratorMultime.h  Multime.cpp  Multime.h
